fmt; +vi, usage note and der; does anyone know the company's official position? <Hoover#66244>

--- a/wiki/Hoover.wikitext
+++ b/wiki/Hoover.wikitext
@@ -1,9 +1,31 @@
 {{-en-}}
 ===Etymology===
-From the brand name of one of the first vacuum cleaners.
+The common noun and verb are taken from the brand name of one of the first vacuum cleaners.
+
+===Proper noun===
+'''Hoover'''&reg;
+
+#A brand of vacuum cleaner.
+
 ===Noun===
-#[[Vacuum cleaner]].
-===Verb===
-#To clean with a vacuum cleaner.
-===Proper Noun===
-#(''Trademark'') A brand of vacuum cleaner.
+'''hoover'''
+
+#A generic term for a [[vacuum cleaner]], irrespective of brand.
+
+===Transitive verb===
+'''to Hoover''' ('''Hoovering''', '''Hoovered''', '''Hoovered''') ''or'' '''to hoover''' ('''hoovering''', '''hoovered''', '''hoovered''')
+
+#To clean (a room, etc) with a vacuum cleaner, irrespective of brand.
+#:''I need to hoover this room.''
+
+===Intransitive verb===
+'''to Hoover''' ('''Hoovering''', '''Hoovered''', '''Hoovered''') ''or'' '''to hoover''' ('''hoovering''', '''hoovered''', '''hoovered''')
+
+#To use a vacuum cleaner, irrespective of brand.
+#:''My husband is upstairs, hoovering.''
+
+===Derived terms===
+*[[hoover up]]
+
+===Usage note===
+*'''Hoover''' is a registered trademark of [[w:The Hoover Company|The Hoover Company]].  It's use as a generic term is a common example of [[trademark erosion]].<!--Anyone know the company's position on this?-->
