--- a/wiki/%E7%AC%94.wikitext
+++ b/wiki/%E7%AC%94.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#writing brush
-*# write
+*# [[writing brush]]
+*# [[write]]
 *# stroke
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,17 +35,77 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[筆]]
 
+===Compounds===
+*[[笔触]]
+*[[笔床]]
+*[[笔答]]
+*[[笔胆]]
+*[[笔刀]]
+*[[笔道儿]]
+*[[笔地生花]]
+*[[笔底下]]
+*[[笔调]]
+*[[笔陡]]
+*[[笔端]]
+*[[笔伐]]
+*[[笔法]]
+*[[笔锋]]
+*[[笔杆子]]
+*[[笔耕]]
+*[[笔供]]
+*[[笔管条直]]
+*[[笔画]]
+*[[笔会]]
+*[[笔记]]
+*[[笔记本]]
+*[[笔记本电脑]]
+*[[笔迹]]
+*[[笔夹]]
+*[[笔架]], [[笔架儿]]
+*[[笔尖]], [[笔尖儿]]
+*[[笔据]]
+*[[笔力]]
+*[[笔立]]
+*[[笔录]]
+*[[笔路]]
+*[[笔帽]], [[笔帽儿]]
+*[[笔名]]
+*[[笔墨]]
+*[[笔墨官司]]
+*[[笔囊]]
+*[[笔铅]]
+*[[笔峭]]
+*[[笔润]]
+*[[笔石]]
+*[[笔试]]
+*[[笔势]]
+*[[笔顺]]
+*[[笔诉]]
+*[[笔算]]
+*[[笔谈]]
+*[[笔套]], [[笔套儿]]
+*[[笔体]]
+*[[笔挺]]
+*[[笔筒]]
+*[[笔头儿]]
+*[[笔误]]
+*[[笔洗]]
+*[[笔下]]
+*[[笔心]], [[笔芯]]
+*[[笔削]]
+*[[笔译]]
+*[[笔意]]
+*[[笔友]]
+*[[笔札]]
+*[[笔债]]
+*[[笔战]]
+*[[笔者]]
+*[[笔直]]
+*[[笔致]]
+*[[笔资]]
+*[[笔走龙蛇]]
+
 * '''Other info''': 
-
-----
-
-== [[Japanese]] [[Kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[ひつ]] (hitsu)
-** '''[[Kun]]''': [[ふで]] (fude)
-
-* '''Other info''':  
 
 ----
 
