--- a/wiki/hoover_up.wikitext
+++ b/wiki/hoover_up.wikitext
@@ -5,3 +5,6 @@
 #To suck (something) into a vacuum cleaner, irrespective of brand.
 #:''Don't worry about the mess on the carpet - I'll hoover it up later.''
 #(''figuratively'') To eat (food) quickly, especially by taking it into the mouth directly from the plate rather than using cutlery.
+
+===Usage note===
+''See the usage note at'' [[Hoover]]
