--- a/wiki/spik.wikitext
+++ b/wiki/spik.wikitext
@@ -1,3 +1,7 @@
-spik -n- The inside part of the hat, this is the part which touches the top of the wearer's head.
+==English==
+===Noun===
+'''spik''' (''plural'' '''spiks''')
+
+#The part of the interior of a [[hat]] that touches the top of the wearer's head.
 
 {{protologism}}
