fmt, trademark symbol, another syn <bic#66240>

--- a/wiki/bic.wikitext
+++ b/wiki/bic.wikitext
@@ -1,11 +1,11 @@
 ==French==
 ===Etymology===
-[[Bic]] is a trade name.
+From [[w:Bic|Bic]]&reg;, a popular brand of ballpoint pen.
 
 ===Noun===
-'''bic''' ''m''
+'''bic''' ''m'' (''plural'' '''bics''')
 
-# [[ball-point pen]]
+#[[ballpoint pen]], [[Biro]]
 
-===Synonym===
+====Synonyms====
 *[[stylo à bille]], [[stylo]]
