capitalised brand name; more etym; link to BIC's website <bic#66240>

--- a/wiki/bic.wikitext
+++ b/wiki/bic.wikitext
@@ -1,6 +1,6 @@
 ==French==
 ===Etymology===
-From [[w:Bic|Bic]]&reg;, a popular brand of ballpoint pen.
+From [[w:BIC_Corporation|BIC]]&reg;<!--note: the brand name is all in capitals-->, a popular French brand of ballpoint pen; from the name of the [[co-founder]] of the company manufacturing these pens, Marcel Bich.
 
 ===Noun===
 '''bic''' ''m'' (''plural'' '''bics''')
@@ -9,3 +9,6 @@ From [[w:Bic|Bic]]&reg;, a popular brand of ballpoint pen.
 
 ====Synonyms====
 *[[stylo à bille]], [[stylo]]
+
+===See also===
+*[http://www.bicworld.com/inter_en/index.asp The BIC Corporation's website]
