what is the trademark status of this word? <biro#66270>

--- a/wiki/biro.wikitext
+++ b/wiki/biro.wikitext
@@ -3,7 +3,7 @@
 From the name of the inventor of the pen, [[w:Laszlo_Biro|Laszlo Biro]]
 
 ===Noun===
-'''Biro''' ''or'' '''biro'''
+'''Biro''' ''or'' '''biro''' (''plural'' '''Biros''' ''or'' '''biros''')
 
 #(''Britain, Australia, and New Zealand'') A generic term for a [[ballpoint pen]].
 
