+locality of "Biro" <bic#66240>

--- a/wiki/bic.wikitext
+++ b/wiki/bic.wikitext
@@ -5,7 +5,7 @@ From [[w:BIC_Corporation|BIC]]&reg;<!--note: the brand name is all in capitals--
 ===Noun===
 '''bic''' ''m'' (''plural'' '''bics''')
 
-#[[ballpoint pen]], [[Biro]]
+#[[ballpoint pen]], [[Biro]] (''Britain, Australia, New Zealand'')
 
 ====Synonyms====
 *[[stylo à bille]], [[stylo]]
