--- a/wiki/iPod.wikitext
+++ b/wiki/iPod.wikitext
@@ -1,1 +1,8 @@
-iPod is a MP3 Player created by Apple Computing. It has less skin colours and less battery life compared to Creative's MuVo and ZenTouch. It also has 100 times less storage space. See [[Apple]]
+==English==
+===Proper noun===
+'''iPod'''&reg; (''plural'' '''iPods''')
+
+#A brand of [[MP3 player]] manufactured by [[w:Apple Computer|Apple Computer]].
+
+===See also===
+*[[w:iPod|Wikipedia article on the iPod]]
