--- a/wiki/jean.wikitext
+++ b/wiki/jean.wikitext
@@ -4,7 +4,13 @@
 
 #A female [[given name]].
 
+===Noun===
+'''jean'''
+
+# a type of [[trousers]] made of [[denim]]
+
 ----
+
 ==French==
 ===Proper noun===
 '''Jean'''
