+plural <MP3 player#66271>

--- a/wiki/MP3_player.wikitext
+++ b/wiki/MP3_player.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''MP3 player'''
+'''MP3 player''' (''plural'' '''MP3 players''')
 
 #An [[electronic]] device for playing digital audio files in the [[MP3]] format (and, in many cases, also files in some other formats).
 
