--- a/wiki/smiley_face.wikitext
+++ b/wiki/smiley_face.wikitext
@@ -2,4 +2,8 @@
 ===Noun===
 '''[[smiley]] [[face]]'''
 
+# A graphic logo first popularized in the early 1970s 
 # A simplified representation of a smiling face, usually as two dots for the eyes and an arc for the mouth,i.e.:O)
+
+===See also===
+*[[w:Smiley face|Wikipedia article on the smiley face]]
