--- a/wiki/provoke.wikitext
+++ b/wiki/provoke.wikitext
@@ -1,6 +1,10 @@
 ==English==
 ===Transitive verb===
-'''to provoke''' ('''provoking''', '''provoked''')
+'''to provoke''' ([[provokes]], [[provoked]], [[provoking]])
 
 #To cause (a person) to become angry.
 #To bring about a reaction.
+
+====Derived terms====
+*[[provocation]]
+*[[provocative]]
