modified def <self-referential#66225>

--- a/wiki/self-referential.wikitext
+++ b/wiki/self-referential.wikitext
@@ -2,7 +2,7 @@
 ===Adjective===
 '''self-referential''' (''[[comparative]]'' '''more self-referential''', ''[[superlative]]'' '''most self-referential''')
 
-#That or who deliberately refers to itself or oneself in a context where this is not usually done.
+#That or who refers to itself or oneself; used as a stylistic device when done in literary works.
 
 ====Quotations====
 *'''1991''': Many women authors extend the sort of metafictional self-scrutiny which The Golden Notebook so extensively sustains: Eva Figes's novels, for example, often raise self-referential questioning of their own representational validity and Muriel Spark teases several of her heroines with unsettling awareness of the process of their own creation. &mdash; ''Postmodernism and contemporary fiction'', Smyth, Edmund J., B T Batsford Ltd
