/* Translations */ wikify ja <john#59741>

--- a/wiki/john.wikitext
+++ b/wiki/john.wikitext
@@ -19,5 +19,5 @@
 *French: [[Jean#French|Jean]]
 *German: [[Johannes]]
 *Italian: [[Giovanni]]
-*Japanese: ジョン
+*Japanese: [[ジョン]]
 *Vietnamese: [[Giôn]]
