+plural & extra translation <borsa#66226>

--- a/wiki/borsa.wikitext
+++ b/wiki/borsa.wikitext
@@ -1,8 +1,9 @@
 ==Italian==
 ===Noun===
-'''borsa''' ''f''
+'''borsa''' ''f'' (''plural'' '''borse''')
 
-# [[bag]]
+#[[bag]]
+#[[stock market]]
 
 ===Related terms===
 *[[borsanera]]
