/* Translations */ <black currant#54927>

--- a/wiki/black_currant.wikitext
+++ b/wiki/black_currant.wikitext
@@ -12,13 +12,12 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
 *{{fi}}: [[mustaherukka]], [[mustaviinimarja]] (''colloquial'')
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+
 |}
 |}
 
@@ -27,14 +26,13 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
 *{{fi}}: [[mustaherukka]], [[mustaviinimarja]] (''colloquial'')
 *{{fr}}: [[cassis]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+*Japanese: [[カシス]], [[くろすぐり]]
 |}
 |}
 
