--- a/wiki/Epilepsie.wikitext
+++ b/wiki/Epilepsie.wikitext
@@ -1,9 +1,10 @@
 ==German==
-
 ===Noun===
+'''Epilepsie''' ''f'' (''plural'' '''Epilepsien''')
 
-'''E·pi·lep·sie''' ''f'', ''pl. Epilepsien''
+====Hyphenation====
+'''E·pi·lep·sie'''
 
-# (''Med.'') [[Epilepsy]]
+#[[epilepsy]]
 
 [[de:Epilepsie]]
