/* Translations */ {{fr}}: [[macédonien]] ''m'' <Macedonian#36267>

--- a/wiki/Macedonian.wikitext
+++ b/wiki/Macedonian.wikitext
@@ -15,10 +15,11 @@ MAH-seh-DOH-nee-a
 
 ====Translations====
 *Chinese: [[马其顿语]]
-*{{nl}}: [[Macedonisch]] 2
+*{{nl}}: [[Macedonisch]] (2)
+*{{fr}}: [[macédonien]] ''m'' (2)
 *German: [[Mazedonisch]]
 *Greek: [[Μακεδονικά]] (Makedonika), [[Μακεδονικός]] (Makedonikos)
-*Italian: [[Macedoniana]] ''f'', [[Macedoniano]] ''m''
+*Italian: [[macedoniana]] ''f'', [[macedoniano]] ''m''
 *Japanese: [[マケドニア人]], [[マケドニア語]]
 *Latin: [[Macedoniense]], [[Macedoniensis]]
 *Macedonian: ([[Makedonska]]), ([[Makedonski]])
