fmt, plural <flak#66217>

--- a/wiki/flak.wikitext
+++ b/wiki/flak.wikitext
@@ -1,8 +1,11 @@
 ==English==
 ===Etymology===
-German acronym of '''''Fl'''ieger'''a'''bwehr'''k'''anone''. First attested [[w:1940|1940]] as ''an anti-aircraft gun''. Sense of ''adverse criticism'' attested since [[w:1963|1963]] in [[American English]]. 
+German acronym of '''''Fl'''ieger'''a'''bwehr'''k'''anone''. First attested [[w:1940|1940]] as ''an anti-aircraft gun''. Sense of "adverse criticism" attested since [[w:1963|1963]] in [[American English]].
+
 ===Noun===
+'''flak''' (''[[countable]] and [[uncountable]]''; ''plural'' '''flaks''')
+
 #Ground-based anti-aircraft guns firing explosive shells.
 #Anti-aircraft shell fire.
-#(''figurative, informal'') Adverse criticism.
-#(''informal'') Public relations spokesperson. Also spelt [[flack]].
+#(''figurative, informal''; ''also'' '''flack''') Adverse criticism.
+#(''informal''; ''also'' '''flack''') A public-relations spokesperson.
