/* Translations */ fr: <Macedonian#36267>

--- a/wiki/Macedonian.wikitext
+++ b/wiki/Macedonian.wikitext
@@ -16,7 +16,7 @@ MAH-seh-DOH-nee-a
 ====Translations====
 *Chinese: [[马其顿语]]
 *{{nl}}: [[Macedonisch]] (2)
-*{{fr}}: [[macédonien]] ''m'' (2)
+*{{fr}}: [[Macédonien]] ''m'' (1), [[Macédonienne]] ''f'' (1), [[macédonien]] ''m'' (2)
 *German: [[Mazedonisch]]
 *Greek: [[Μακεδονικά]] (Makedonika), [[Μακεδονικός]] (Makedonikos)
 *Italian: [[macedoniana]] ''f'', [[macedoniano]] ''m''
