--- a/wiki/Alsatian.wikitext
+++ b/wiki/Alsatian.wikitext
@@ -8,12 +8,15 @@
 
 # A person from [[Alsace]]
 
+* {{fr}} : [[Alsacien]] ''m'', [[Alsacienne]] ''f''
+
 ===Proper noun===
 '''Alsatian'''
 
 # The language or dialect of [[Alsace]]
 
 *Alsatian: [[Elsässisch]]
+*{{fr}} : [[alsacien]] ''m''
 
 ===Common noun===
 '''alsatian''' ([[alsatians]])
