--- a/wiki/alsacien.wikitext
+++ b/wiki/alsacien.wikitext
@@ -1,4 +1,11 @@
+{{-fr-}}
+
 ===Noun===
-'''Alsacien'''
+'''alsacien'''
 
 #French/german dialect (its speakers live in France, but speak a German dialect)
+
+=== Noun ===
+'''Alsacien'''
+
+# A person from [[Alsace]].
