--- a/wiki/courrier_%C3%A9lectronique.wikitext
+++ b/wiki/courrier_%C3%A9lectronique.wikitext
@@ -1,2 +1,8 @@
 ==French==
-'''[[electronic mail]]'''
+===Noun phrase===
+'''courrier électronique''' ''m''
+
+#[[electronic mail]]
+
+====Synonyms====
+*[[courriel]]
