--- a/wiki/%E9%9D%99.wikitext
+++ b/wiki/%E9%9D%99.wikitext
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#quiet, still, motionless
-*# gentle
+*# [[quiet]], [[still]], [[motionless]]
+*# [[gentle]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,15 +34,52 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[靜]]
 
+===Compounds===
+*[[静场]]
+*[[静电]]
+*[[静电感应]]
+*[[静电计]]
+*[[静观]]
+*[[静候]]
+*[[静寂]]
+*[[静脉]]
+*[[静脉曲张]]
+*[[静脉注射]]
+*[[静谧]]
+*[[静摩擦]]
+*[[静默]]
+*[[静穆]]
+*[[静僻]]
+*[[静悄悄]], [[静悄悄的]]
+*[[静思]]
+*[[静态]]
+*[[静听]]
+*[[静物]]
+*[[静心]]
+*[[静养]]
+*[[静幽幽]], [[静幽幽的]]
+*[[静园]]
+*[[静止]]
+*[[静坐]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[せい]] (sei), [[じょう]] (jō)
 ** '''[[Kun]]''': [[しずか]] (shizuka), [[しずめる]] (shizumeru), [[しずまる]] (shizumaru)
+
+===Compounds===
+*[[静観]]
+*[[静止]]
+*[[静寂]]
+*[[静粛]]
+*[[静聴]]
+*[[静脈]]
+*[[静養]]
 
 * '''Other info''':  
 
