en: entry; Spanish has an accent <Mejico#66189>

--- a/wiki/Mejico.wikitext
+++ b/wiki/Mejico.wikitext
@@ -1,2 +1,5 @@
-==Spanish==
-'''[[Mexico]]'''
+==English==
+===Proper noun===
+'''Mejico'''
+
+#A variant spelling of '''[[Mexico]]''', considered to be incorrect.
