--- a/wiki/%E9%BB%98.wikitext
+++ b/wiki/%E9%BB%98.wikitext
@@ -13,14 +13,14 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#silent
-*# quiet, still
-*# dark
+*# [[silent]]
+*# [[quiet]], [[still]]
+*# [[dark]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -32,15 +32,34 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': mak6
 
+===Compounds===
+*[[默哀]]
+*[[默祷]]
+*[[默读]]
+*[[默记]]
+*[[默默]]
+*[[默默无闻]]
+*[[默念]]
+*[[默片]]
+*[[默契]]
+*[[默然]]
+*[[默认]]
+*[[默诵]]
+*[[默想]]
+*[[默写]]
+*[[默许]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[もく]] (moku)
 ** '''[[Kun]]''': [[だまる]] (damaru)
+
+* '''Style''': kyujitai
 
 * '''Other info''':  
 
