--- a/wiki/movie.wikitext
+++ b/wiki/movie.wikitext
@@ -20,5 +20,6 @@ From [[moving]] [[picture]].
 *Finnish: [[elokuva]]
 *French: [[film]] ''m''
 *German: [[Film]] ''m''
+*Polish: [[film]] ''m''
 *Slovak: [[film#Slovak|film]] ''m''
 *Spanish: [[película]] ''f''
