fmt; +translations from Wikipedia & Wikipedia link <pre-Columbian#1670>

--- a/wiki/pre-Columbian.wikitext
+++ b/wiki/pre-Columbian.wikitext
@@ -1,7 +1,14 @@
-==[[Adjective]]==
+==English==
+===Adjective===
+'''pre-Columbian''' (''no [[comparative]] or [[superlative]]'')
 
-#Referring to the [[culture]]s of the [[American]] [[continent]] before the European influence. While technically referring to the era before [[Christopher Columbus]]
+#Referring to the [[culture]]s of the [[American]] [[continent]] before the European influence, specifically to the era before the continent was visited by [[w:Christopher Columbus|Christopher Columbus]].
 
 ===Translations===
-* Dutch: [[precolumbiaans]]
-* Spanish : Precolombino
+*Danish: [[præ-columbiansk]]
+*Dutch: [[precolumbiaans]]
+*German: [[präkolumbisch]]
+*Spanish: [[precolombino]]
+
+===See also===
+*[[w:pre-Columbian|Wikipedia article "pre-Columbian"]]
