--- a/wiki/nome.wikitext
+++ b/wiki/nome.wikitext
@@ -3,8 +3,13 @@
 '''nome''' ''m'' (''plural'' '''[[nomi]]''')
 
 # [[name]]
+# [[noun]]
+
+====Synonym====
+*[[sostantivo]]
 
 ===Related terms===
 *[[cognome]]
 *[[nominale]]
 *[[nominare]]
+[[it:nome]]
