fmt; defs -> translations; trimmed enc info; tabulated translations; moved translations of "Mexico City" to page for that term <Mexico#1673>

--- a/wiki/Mexico.wikitext
+++ b/wiki/Mexico.wikitext
@@ -1,68 +1,92 @@
 ==English==
-
 ===Proper noun===
 '''Mexico'''
 
-# Country in North America. Official name: Estados Unidos Mexicanos (United Mexican States). Independant since 1821.
-# An alternative name for [[Mexico City]] (Ciudad de México).
+# Country in North America. Official name: Estados Unidos Mexicanos (United Mexican States).
+#(''rare'') An alternative name for [[Mexico City]].
 
-====Alternate Spelling====
-*[[Mejico]] (considered improper)
+====Variant spellings====
+*(''country''): [[Mejico]] (considered improper)
 
 ====Translations====
-*[[Bosnian]]: Meksiko ''m'' (1, 2)
-*[[Breton]]: [[Mec'hiko]] (1), [[Mec'hiko]] (2)
-*Chinese: [[墨西哥]] (Mòxīgē, 1), [[墨西哥城]], (Mòxīgē chéng, 2)
-*Czech: [[Mexiko]] (1)
-*Danish: Mexico (1)
-*Dutch: Mexico (1), Mexico (2)
-*[[Esperanto]]: [[Meksiko]], [[Meksikio]] (1)
-*Finnish: [[Meksiko]] (1)
-*French: [[Mexique]] ''m'' (1), Mexico (2)
-*German: [[Mexiko]] ''n'' (1)
-*Greek: [[Μεξικό]] (1)
-*Hungarian: [[Mexikó]] (1), [[Mexikóváros]] (2)
-*[[Interlingua]]: Mexico (1), Mexico, citate de Mexico (2)
-*Italian: [[Messico]] ''m'' (1), [[Città del Messico]] ''f'' (2)
-*Japanese: [[メキシコ]] (Mekishiko)(1), [[メキシコシティ]] (Mekishiko-shiti)(2)
-*Polish: [[Meksyk]] (1), [[Meksyk]] (2)
-*Portuguese: [[México]] ''m'' (1), [[Cidade do México]] (2)
-*Romanian: [[Mexic]] ''n'' (1), Mexico (2)
-*Russian: [[Мексика]] (M'eksika, 1)
-*Slovene: [[Mehika]] ''f'' (1)
-*Spanish: [[México]] ''m'' (1), [[Ciudad de México]] (2)
-*Swedish: [[Mexiko]] (1)
-*Turkish: [[Meksika]] (1)
 
-''See also'' [[Countries of the world]]
+'''country'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*[[Bosnian]]: Meksiko ''m''
+*[[Breton]]: [[Mec'hiko]]
+*Chinese: [[墨西哥]] (Mòxīgē)
+*Czech: [[Mexiko]]
+*Danish: Mexico
+*Dutch: Mexico
+*[[Esperanto]]: [[Meksiko]], [[Meksikio]]
+*Finnish: [[Meksiko]]
+*French: [[Mexique]] ''m''
+*German: [[Mexiko]] ''n''
+*Greek, Modern: [[Μεξικό]]
+*Hungarian: [[Mexikó]]
+*[[Interlingua]]: Mexico
+*Italian: [[Messico]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Japanese: [[メキシコ]] (Mekishiko)
+*Polish: [[Meksyk]]
+*Portuguese: [[México]] ''m''
+*Romanian: [[Mexic]] ''n''
+*Russian: [[Мексика]] (M'eksika)
+*Slovene: [[Mehika]] ''f''
+*Spanish: [[México]] ''m''
+*Swedish: [[Mexiko]]
+*Turkish: [[Meksika]]
+|}
+|}
 
-=== Further reading ===
+'''Mexico City'''
+''See'' [[Mexico City]]
 
-* Wikipedia article on [[w:Mexico|Mexico]]
+===See also===
+*[[Wiktionary_Appendix:Countries of the world|Wiktionary appendix of countries of the world]]
+*[[w:Mexico|Wikipedia article on Mexico]]
 
 ----
-
 ==Danish==
-===Proper Noun===
-# Country in North America.
+===Proper noun===
+'''Mexico'''
+
+#Mexico (''country'')
 
 ----
-
 ==Dutch==
-===Proper Noun===
-# Country in North America.
-# The capital of Mexico.
+===Proper noun===
+'''Mexico'''
+
+#Mexico (''country'')
+#[[Mexico City]]
 
 ----
-
 ==French==
-===Proper Noun===
-# The capital of Mexico.
+===Proper noun===
+'''Mexico'''
+
+#[[Mexico City]]
 
 ----
-
 ==Interlingua==
-===Proper Noun===
-# Country in North America.
+===Proper noun===
+'''Mexico'''
 
+#Mexico (''country'')
 [[eo:Mexico]]
+
+----
+==Romanian==
+===Proper noun===
+'''Mexico'''
+
+#[[Mexico City]]
