translations moved here from "Mexico" (meaning Mexico City) <Mexico City#66283>

--- a/wiki/Mexico_City.wikitext
+++ b/wiki/Mexico_City.wikitext
@@ -8,6 +8,9 @@
 *[[Tenochtitlan]] (''in [[pre-Columbian]] times'')
 
 ====Translations====
+*[[Bosnian]]: Meksiko ''m''
+*[[Breton]]: [[Mec'hiko]]
+*Chinese: [[墨西哥城]], (Mòxīgē chéng)
 *Danish: Mexico City
 *Dutch: [[Mexico#Dutch|Mexico]]
 *[[Esperanto]]: [[Meksikurbo]]
@@ -15,10 +18,13 @@
 *Finnish: [[México#Finnish|México]]
 *French: [[Mexico#French|Mexico]]
 *German: [[Mexiko-Stadt]]
+*Hungarian: [[Mexikóváros]]
+*[[Interlingua]]: Mexico, citate de Mexico
 *Italian: [[Città del Messico]] ''f''
-*Japanese: [[メキシコシティ]]
+*Japanese: [[メキシコシティ]] (Mekishiko-shiti)
 *Latin: [[Mexicopolis]]
 *Norwegian: [[Mexico by]]
+*Polish: [[Meksyk]]
 *Portuguese: [[México#Portuguese|México]], [[Cidade do México]]
 *Romanian: [[Mexico#Romanian|Mexico]]
 *Spanish: [[México#Spanish|México]], [[Ciudad de México]]
