lower-case g <gibibyte#66142>

--- a/wiki/gibibyte.wikitext
+++ b/wiki/gibibyte.wikitext
@@ -1,6 +1,5 @@
 ==English==
-
 ===Noun===
-'''Gibibyte'''
+'''gibibyte''' (''plural'' '''gibibytes''')
 
-# One billion (1,000,000,000) bytes, as opposed to a [[Gigabyte]].
+# One billion (1,000,000,000) bytes, as opposed to a [[gigabyte]].
