lower-case g; plural; imprecise rather than informal; imprecise sense refers to a gibibyte only <gigabyte#66143>

--- a/wiki/gigabyte.wikitext
+++ b/wiki/gigabyte.wikitext
@@ -1,7 +1,6 @@
 ==English==
-
 ===Noun===
-'''Gigabyte'''
+'''gigabyte''' (''plural'' '''gigabytes''')
 
-# (''computing'') 2<sup>30</sup> (1,073,741,824) bytes, as opposed to a [[Gibibyte]].
-# (''computing'') Informally, either a Gigabyte or a Gibibyte.
+#(''computing'') Strictly, 2<sup>30</sup> (1,073,741,824) bytes, as opposed to a [[gibibyte]].
+#(''computing'') Imprecisely, a gibibyte.
