lower-case m; abbr -> symbol; English -> translingual <mHz#66144>

--- a/wiki/mHz.wikitext
+++ b/wiki/mHz.wikitext
@@ -1,11 +1,10 @@
-==English==
-
-===Abbreviation===
+==Translingual==
+===Symbol===
 '''mHz'''
 
-# [[millihertz]]
+#[[millihertz]]
 
-===Abbreviation===
+===Symbol===
 '''MHz'''
 
-# [[Megahertz]]
+#[[megahertz]]
