reworded def; +plural; lower-case H; deleted "milliHertz" (this is incorrect) <millihertz#66145>

--- a/wiki/millihertz.wikitext
+++ b/wiki/millihertz.wikitext
@@ -1,10 +1,9 @@
 ==English==
-
 ===Noun===
-'''millihertz''', rarely '''milliHertz'''
+'''millihertz''' (''plural'' '''millihertz''')
 
-# One cycle per thousand seconds.
+#One-thousandth of a cycle per second.
 
-===Related Terms===
-*[[Hertz]]
+===Related terms===
+*[[hertz]]
 *[[milli-]]
