--- a/wiki/millihertz.wikitext
+++ b/wiki/millihertz.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''millihertz''' (''plural'' '''millihertz''')
 
-#One-thousandth of a cycle per second.
+#A unit equal to one-thousandth of a cycle per second.
 
 ===Related terms===
 *[[hertz]]
