added proper entry (was just "27"); example <numéroter#66129>

--- a/wiki/num%C3%A9roter.wikitext
+++ b/wiki/num%C3%A9roter.wikitext
@@ -1,1 +1,6 @@
-27
+==French==
+===Transitive verb===
+'''numéroter'''
+
+#to [[number]] (''to assign numbers to'')
+#:''Les maisons de cette rue sont numérotés de 1 à 100'' &ndash; The houses in this street are numbered from 1 to 100
