+pl & syn <sabbia#66116>

--- a/wiki/sabbia.wikitext
+++ b/wiki/sabbia.wikitext
@@ -1,8 +1,11 @@
 ==Italian==
 ===Noun===
-'''sabbia''' ''f''
+'''sabbia''' ''f'' (''plural'' '''sabbie''')
 
-# [[sand]]
+#[[sand]]
+
+====Synonyms====
+*[[rena]]
 
 ===Related terms===
 *[[sabbiatura]]
