fixed typo ("Phillipines") <pH#66123>

--- a/wiki/pH.wikitext
+++ b/wiki/pH.wikitext
@@ -14,4 +14,4 @@ From ''p'', denoting negative logarithm, and ''H'', denoting Hydrogen.
 ===Abbreviation===
 '''PH'''
 
-# The [[Phillipines]].
+# The [[Philippines]].
