decapitalised "hydrogen"; +"see also pK" <pH#66123>

--- a/wiki/pH.wikitext
+++ b/wiki/pH.wikitext
@@ -3,10 +3,10 @@
 ===Abbreviation===
 '''pH'''
 
-# The negative of the base 10 [[logarithm]] of the concentration of [[Hydrogen]] ions, measured in [[mole]]s per liter.
+# The negative of the base 10 [[logarithm]] of the concentration of [[hydrogen]] ions, measured in [[mole]]s per liter.
 
-====See Also====
-*[[pOH]]
+====See also====
+*[[pOH]], [[pK]]
 
 ====Etymology====
 From ''p'', denoting negative logarithm, and ''H'', denoting Hydrogen.
