--- a/wiki/%E8%A7%84.wikitext
+++ b/wiki/%E8%A7%84.wikitext
@@ -12,15 +12,15 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': rules, regulations, customs, law
+* '''Common Meaning''': [[rule]]s, [[regulation]]s, [[custom]]s, [[law]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': gūi (gui1)
+*** '''[[Pinyin]]''': guī (gui1)
 *** '''[[Wade-Giles]]''': kuei<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -30,6 +30,32 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[規]]
+
+===Compounds===
+*[[规避]]
+*[[规程]]
+*[[规定]]
+*[[规定动作]]
+*[[规范]]
+*[[规范化]]
+*[[规复]]
+*[[规格]]
+*[[规划]]
+*[[规矩]]
+*[[规矩绳墨]]
+*[[规例]]
+*[[规律]]
+*[[规模]]
+*[[规模经济]]
+*[[规劝]]
+*[[规条]]
+*[[规行矩步]]
+*[[规约]]
+*[[规则]]
+*[[规章]]
+*[[规整]]
+*[[规正]]
+*[[规制]]
 
 * '''Other info''': 
 
