--- a/wiki/pH.wikitext
+++ b/wiki/pH.wikitext
@@ -3,7 +3,7 @@
 ===Abbreviation===
 '''pH'''
 
-# The negative of the base 10 [[logarithm]] of the concentration of [[hydrogen]] ions, measured in [[mole]]s per liter.
+# The negative of the base 10 [[logarithm]] of the concentration of [[hydrogen]] ions, measured in [[mole]]s per liter. A measure of acidity or alkalinity which takes numerical values from 0 (maximum acidity) through 7 (neutral) to 14 (maximum alkalinity).
 
 ====See also====
 *[[pOH]], [[pK]]
