/* Verb */ Non-personal forms. <quaerere#66287>

--- a/wiki/quaerere.wikitext
+++ b/wiki/quaerere.wikitext
@@ -6,3 +6,41 @@
 ('''quaer&#333;''', '''quaerere''', '''quaes&#299;v&#299;''', '''quaes&#299;tum''')
 # To seek.
 # To ask.
+
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> quaerer&#275;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> quaes&#299;tus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> quaes&#299;t&#363;rus
+|style="background:#F7F7F5;"| <big> quaererendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> quaerere
+|style="background:#F7F7F5;" width=125px| <big> quaer&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> quaes&#299;visse
+|style="background:#F7F7F5;"| <big> quaes&#299;tus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> quaes&#299;t&#363;rus esse
+|style="background:#F7F7F5;"| <big> quaes&#299;tum &#299;r&#299;
+|}
