/* Common noun */ <Alsatian#46991>

--- a/wiki/Alsatian.wikitext
+++ b/wiki/Alsatian.wikitext
@@ -21,7 +21,7 @@
 ===Common noun===
 '''alsatian''' ([[alsatians]])
 
-# A breed of dog originating in [[Alsace]]
+# English name for a breed of dog called [[German shepherd]] until the first World War, changed at that time due to anti-German sentiment.
 
 ====Synonyms====
 *[[German shepherd]]
