--- a/wiki/quaerere.wikitext
+++ b/wiki/quaerere.wikitext
@@ -44,3 +44,195 @@
 |style="background:#F7F7F5;"| <big> quaes&#299;t&#363;rus esse
 |style="background:#F7F7F5;"| <big> quaes&#299;tum &#299;r&#299;
 |}
+
+====Conjugation====
+Third conjugation (3).
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|quaer&#333;
+|style="background:#FBFCE4;"|quaeris
+|style="background:#FBFCE4;"|quaerit
+|style="background:#FBFCE4;"|quaerimus
+|style="background:#FBFCE4;"|quaeritis
+|style="background:#FBFCE4;"|quaerunt
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"|quaeram
+|style="background:#FBFCE4;"|quaer&#275;s
+|style="background:#FBFCE4;"|quaeret
+|style="background:#FBFCE4;"|quaer&#275;mus
+|style="background:#FBFCE4;"|quaer&#275;tis
+|style="background:#FBFCE4;"|quaerent
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"|quaer&#275;bam
+|style="background:#FBFCE4;"|quaer&#275;b&#257;s
+|style="background:#FBFCE4;"|quaer&#275;bat
+|style="background:#FBFCE4;"|quaer&#275;b&#257;mus
+|style="background:#FBFCE4;"|quaer&#275;b&#257;tis
+|style="background:#FBFCE4;"|quaer&#275;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"|quaes&#299;v&#299;
+|style="background:#FBFCE4;"|quaes&#299;vist&#299;
+|style="background:#FBFCE4;"|quaes&#299;vit
+|style="background:#FBFCE4;"|quaes&#299;vimus
+|style="background:#FBFCE4;"|quaes&#299;vistis
+|style="background:#FBFCE4;"|quaes&#299;v&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"|quaes&#299;ver&#333;
+|style="background:#FBFCE4;"|quaes&#299;veris
+|style="background:#FBFCE4;"|quaes&#299;verit
+|style="background:#FBFCE4;"|quaes&#299;verimus
+|style="background:#FBFCE4;"|quaes&#299;veritis
+|style="background:#FBFCE4;"|quaes&#299;verint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"|quaes&#299;veram
+|style="background:#FBFCE4;"|quaes&#299;ver&#257;s
+|style="background:#FBFCE4;"|quaes&#299;verat
+|style="background:#FBFCE4;"|quaes&#299;ver&#257;mus
+|style="background:#FBFCE4;"|quaes&#299;ver&#257;tis
+|style="background:#FBFCE4;"|quaes&#299;verant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|quaeror
+|style="background:#FBFCE4;"|quaereris
+|style="background:#FBFCE4;"|quaeritur
+|style="background:#FBFCE4;"|quaerimur
+|style="background:#FBFCE4;"|quaerimin&#299;
+|style="background:#FBFCE4;"|quaeruntur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"|quaerar
+|style="background:#FBFCE4;"|quaer&#275;ris
+|style="background:#FBFCE4;"|quaer&#275;tur
+|style="background:#FBFCE4;"|quaer&#275;mur
+|style="background:#FBFCE4;"|quaer&#275;min&#299;
+|style="background:#FBFCE4;"|quaerentur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"|quaer&#275;bar
+|style="background:#FBFCE4;"|quaer&#275;b&#257;ris
+|style="background:#FBFCE4;"|quaer&#275;b&#257;tur
+|style="background:#FBFCE4;"|quaer&#275;b&#257;mur
+|style="background:#FBFCE4;"|quaer&#275;b&#257;min&#299;
+|style="background:#FBFCE4;"|quaer&#275;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>sum
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>es
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>sumus
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>estis
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>er&#333;
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>eris
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>erimus
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>eritis
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>er&#257;s
+|style="background:#FBFCE4;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis
+|style="background:#FBFCE4;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| quaeram
+|style="background:#E7FEE9;"| quaer&#257;s
+|style="background:#E7FEE9;"| quaerat
+|style="background:#E7FEE9;"| quaer&#257;mus
+|style="background:#E7FEE9;"| quaer&#257;tis
+|style="background:#E7FEE9;"| quaerant
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| quaererem
+|style="background:#E7FEE9;"| quaerer&#275;s
+|style="background:#E7FEE9;"| quaereret
+|style="background:#E7FEE9;"| quaerer&#275;mus
+|style="background:#E7FEE9;"| quaerer&#275;tis
+|style="background:#E7FEE9;"| quaererent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| quaes&#299;verim
+|style="background:#E7FEE9;"| quaes&#299;ver&#299;s
+|style="background:#E7FEE9;"| quaes&#299;verit
+|style="background:#E7FEE9;"| quaes&#299;ver&#299;mus
+|style="background:#E7FEE9;"| quaes&#299;ver&#299;tis
+|style="background:#E7FEE9;"| quaes&#299;verint
+|-
+!style="background:#92B887;"|<small>''Pluerfect''
+|style="background:#E7FEE9;"| quaes&#299;vissem
+|style="background:#E7FEE9;"| quaes&#299;viss&#275;s
+|style="background:#E7FEE9;"| quaes&#299;visset
+|style="background:#E7FEE9;"| quaes&#299;viss&#275;mus
+|style="background:#E7FEE9;"| quaes&#299;viss&#275;tis
+|style="background:#E7FEE9;"| quaes&#299;vissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| quaerar
+|style="background:#E7FEE9;"| quaer&#257;ris
+|style="background:#E7FEE9;"| quaer&#257;tur
+|style="background:#E7FEE9;"| quaer&#257;mur
+|style="background:#E7FEE9;"| quaer&#257;min&#299;
+|style="background:#E7FEE9;"| quaerantur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| quaererer
+|style="background:#E7FEE9;"| quaerer&#275;ris
+|style="background:#E7FEE9;"| quaerer&#275;tur
+|style="background:#E7FEE9;"| quaerer&#275;mur
+|style="background:#E7FEE9;"| quaerer&#275;min&#299;
+|style="background:#E7FEE9;"| quaererentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>sim
+|style="background:#E7FEE9;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>s&#299;s
+|style="background:#E7FEE9;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus
+|style="background:#E7FEE9;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis
+|style="background:#E7FEE9;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"|quaes&#299;tus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus
+|style="background:#E7FEE9;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis
+|style="background:#E7FEE9;"|quaes&#299;t&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| quaere
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| quaerite
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = quaes&#299;tus / quaes&#299;ta / quaes&#299;tum <br>
+<font color="red"> 2 </font> = quaes&#299;t&#299; / quaes&#299;tae / quaes&#299;ta  <br>
