/* Verb */ links to seek, ask <quaerere#66287>

--- a/wiki/quaerere.wikitext
+++ b/wiki/quaerere.wikitext
@@ -4,8 +4,8 @@
 
 ===Verb===
 ('''quaer&#333;''', '''quaerere''', '''quaes&#299;v&#299;''', '''quaes&#299;tum''')
-# To seek.
-# To ask.
+# To [[seek]].
+# To [[ask]].
 
 ====Participles====
 {| cellpadding="5" border="1"
