/* Verb */ fmt <canere#47625>

--- a/wiki/canere.wikitext
+++ b/wiki/canere.wikitext
@@ -1,10 +1,10 @@
 ==Latin==
 ===Verb===
-'''[[cano]]''', '''canere''', '''[[cecini]]''', '''[[cantus]]'''
-
-Third conjugation
-
+('''can&#333;''', '''canere''', '''cecin&#299;''', '''cantum''')
 # [[sing]], [[chant]]
+
+====Conjugation====
+Third conjugation (3).
 
 ===Related Terms===
 *[[cantare]]
