--- a/wiki/%E9%A2%93.wikitext
+++ b/wiki/%E9%A2%93.wikitext
@@ -13,17 +13,17 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#ruined, decayed
-*# disintegrate
+*# [[ruin]]ed, [[decay]]ed
+*# [[disintegrate]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': túi (tui2)
+*** '''[[Pinyin]]''': tuí (tui2)
 *** '''[[Wade-Giles]]''': t'ui<sup>2</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -33,6 +33,22 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[頹]], [[頽]]
+
+===Compounds===
+*[[颓败]]
+*[[颓废]]
+*[[颓风]]
+*[[颓坏]]
+*[[颓毁]]
+*[[颓老]]
+*[[颓靡]]
+*[[颓然]]
+*[[颓丧]]
+*[[颓势]]
+*[[颓唐]]
+*[[颓萎]]
+*[[颓垣断壁]]
+*[[颓运]]
 
 * '''Other info''': 
 
