/* Verb */ Non-personal forms. <canere#47625>

--- a/wiki/canere.wikitext
+++ b/wiki/canere.wikitext
@@ -3,6 +3,45 @@
 ('''can&#333;''', '''canere''', '''cecin&#299;''', '''cantum''')
 # [[sing]], [[chant]]
 
+====Participles====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> can&#275;ns
+|style="background:#F7F7F5;" align="center" width=125px| &mdash;&mdash;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;" align="center"| &mdash;&mdash;
+|style="background:#F7F7F5;"| <big> cantus
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> cant&#363;rus
+|style="background:#F7F7F5;"| <big> canendus
+|}
+
+====Infinitives====
+{| cellpadding="5" border="1"
+!style="background:#F1BC4E;"| ''Tense \ Voice''
+!style="background:#D0D0B0;"| ''Active''
+!style="background:#D0D0B0;"| ''Passive''
+|-
+!style="background:#D0D0B0;"| ''Present''
+|style="background:#F7F7F5;" width=125px| <big> canere
+|style="background:#F7F7F5;" width=125px| <big> can&#299;
+|-
+!style="background:#D0D0B0;"| ''Perfect''
+|style="background:#F7F7F5;"| <big> cecinisse
+|style="background:#F7F7F5;"| <big> cantus esse
+|-
+!style="background:#D0D0B0;"| ''Future''
+|style="background:#F7F7F5;"| <big> cant&#363;rus esse
+|style="background:#F7F7F5;"| <big> cantum &#299;r&#299;
+|}
+
+
 ====Conjugation====
 Third conjugation (3).
 
