--- a/wiki/college.wikitext
+++ b/wiki/college.wikitext
@@ -14,7 +14,7 @@
 
 ====Translations====
 *Finnish: [[opisto]] (2), [[oppilaitos]] (2), [[yliopiston osa]] (4, 7), [[yliopisto]] (5), [[korkeakoulu]] (5)
-*[[German]]: [[Fachhochschule]]
+*[[German]]: [[Fachhochschule]] (6)
 *[[Interlingua]]: [[collegio]]
 *Lithuanian: [[koledžas]] ''m'' (1-4, 6, 7), [[kolegija]] ''f'' (institution of higher vocational education in Lithuania)
 *Persian: [[آموزشگاه]] (amuzeshgah) (1-3), [[دانشكده]] (daneshkadeh) (4-7)
