--- a/wiki/canere.wikitext
+++ b/wiki/canere.wikitext
@@ -44,6 +44,195 @@
 
 ====Conjugation====
 Third conjugation (3).
+{| border="1" cellpadding="2"
+!style="background:#F1BC4E;" colspan=3| <small>''Number''
+!style="background:#F1BC4E;" colspan=3| <small>''Singular''
+!style="background:#F1BC4E;" colspan=3| <small>''Plural''
+|-
+!style="background:#F1BC4E;" colspan=3| <small>''Tense \ Person''
+!style="background:#F1BC4E;"| <small>''1.''
+!style="background:#F1BC4E;"| <small>''2.''
+!style="background:#F1BC4E;"| <small>''3.''
+!style="background:#F1BC4E;"| <small>''11.''
+!style="background:#F1BC4E;"| <small>''22.''
+!style="background:#F1BC4E;"| <small>''33.''
+|-
+!style="background:#54E9FA;" rowspan=12|<small>I<br>n<br>d<br>i<br>c<br>a<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;" rowspan=6|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|can&#333;
+|style="background:#FBFCE4;"|canis
+|style="background:#FBFCE4;"|canit
+|style="background:#FBFCE4;"|canimus
+|style="background:#FBFCE4;"|canitis
+|style="background:#FBFCE4;"|canunt
+|-
+!style="background:#54E9FA;"| <small>''Future''
+|style="background:#FBFCE4;"|canam
+|style="background:#FBFCE4;"|can&#275;s
+|style="background:#FBFCE4;"|canet
+|style="background:#FBFCE4;"|can&#275;mus
+|style="background:#FBFCE4;"|can&#275;tis
+|style="background:#FBFCE4;"|canent
+|-
+!style="background:#54E9FA;"| <small>''Imperfect''
+|style="background:#FBFCE4;"|can&#275;bam
+|style="background:#FBFCE4;"|can&#275;b&#257;s
+|style="background:#FBFCE4;"|can&#275;bat
+|style="background:#FBFCE4;"|can&#275;b&#257;mus
+|style="background:#FBFCE4;"|can&#275;b&#257;tis
+|style="background:#FBFCE4;"|can&#275;bant
+|-
+!style="background:#54E9FA;"| <small>''Perfect''
+|style="background:#FBFCE4;"|cecin&#299;
+|style="background:#FBFCE4;"|cecinist&#299;
+|style="background:#FBFCE4;"|cecinit
+|style="background:#FBFCE4;"|cecinimus
+|style="background:#FBFCE4;"|cecinistis
+|style="background:#FBFCE4;"|cecin&#275;runt
+|-
+!style="background:#54E9FA;"| <small>''Future Perfect''
+|style="background:#FBFCE4;"|ceciner&#333;
+|style="background:#FBFCE4;"|cecineris
+|style="background:#FBFCE4;"|cecinerit
+|style="background:#FBFCE4;"|cecinerimus
+|style="background:#FBFCE4;"|cecineritis
+|style="background:#FBFCE4;"|cecinerint
+|-
+!style="background:#54E9FA;"| <small>''Pluperfect''
+|style="background:#FBFCE4;"|cecineram
+|style="background:#FBFCE4;"|ceciner&#257;s
+|style="background:#FBFCE4;"|cecinerat
+|style="background:#FBFCE4;"|ceciner&#257;mus
+|style="background:#FBFCE4;"|ceciner&#257;tis
+|style="background:#FBFCE4;"|cecinerant
+|-
+!style="background:#54E9FA;" rowspan=6| <small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#54E9FA;"|<small>''Present''
+|style="background:#FBFCE4;"|canor
+|style="background:#FBFCE4;"|caneris
+|style="background:#FBFCE4;"|canitur
+|style="background:#FBFCE4;"|canimur
+|style="background:#FBFCE4;"|canimin&#299;
+|style="background:#FBFCE4;"|canuntur
+|-
+!style="background:#54E9FA;"|<small>''Future''
+|style="background:#FBFCE4;"|canar
+|style="background:#FBFCE4;"|can&#275;ris
+|style="background:#FBFCE4;"|can&#275;tur
+|style="background:#FBFCE4;"|can&#275;mur
+|style="background:#FBFCE4;"|can&#275;min&#299;
+|style="background:#FBFCE4;"|canentur
+|-
+!style="background:#54E9FA;"|<small>''Imperfect''
+|style="background:#FBFCE4;"|can&#275;bar
+|style="background:#FBFCE4;"|can&#275;b&#257;ris
+|style="background:#FBFCE4;"|can&#275;b&#257;tur
+|style="background:#FBFCE4;"|can&#275;b&#257;mur
+|style="background:#FBFCE4;"|can&#275;b&#257;min&#299;
+|style="background:#FBFCE4;"|can&#275;bantur
+|-
+!style="background:#54E9FA;"|<small>''Perfect''
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>sum
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>es
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>est
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>sumus
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>estis
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>sunt
+|-
+!style="background:#54E9FA;"|<small>''Future Perfect''
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>er&#333;
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>eris
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>erit
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>erimus
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>eritis
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>erunt
+|-
+!style="background:#54E9FA;"|<small>''Pluperfect''
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>eram
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>er&#257;s
+|style="background:#FBFCE4;"|cantus<font color="red"><sup>1</sup></font><br>erat
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>er&#257;mus
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>er&#257;tis
+|style="background:#FBFCE4;"|cant&#299; <font color="red"><sup>2</sup></font><br>erant
+|-
+!style="background:#92B887;" rowspan=8|<small>S<br>u<br>b<br>j<br>u<br>n<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;" rowspan=4|<small>A<br>c<br>t<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| canam
+|style="background:#E7FEE9;"| can&#257;s
+|style="background:#E7FEE9;"| canat
+|style="background:#E7FEE9;"| can&#257;mus
+|style="background:#E7FEE9;"| can&#257;tis
+|style="background:#E7FEE9;"| canant
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| canerem
+|style="background:#E7FEE9;"| caner&#275;s
+|style="background:#E7FEE9;"| caneret
+|style="background:#E7FEE9;"| caner&#275;mus
+|style="background:#E7FEE9;"| caner&#275;tis
+|style="background:#E7FEE9;"| canerent
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"| cecinerim
+|style="background:#E7FEE9;"| ceciner&#299;s
+|style="background:#E7FEE9;"| cecinerit
+|style="background:#E7FEE9;"| ceciner&#299;mus
+|style="background:#E7FEE9;"| ceciner&#299;tis
+|style="background:#E7FEE9;"| cecinerint
+|-
+!style="background:#92B887;"|<small>''Pluerfect''
+|style="background:#E7FEE9;"| cecinissem
+|style="background:#E7FEE9;"| ceciniss&#275;s
+|style="background:#E7FEE9;"| cecinisset
+|style="background:#E7FEE9;"| ceciniss&#275;mus
+|style="background:#E7FEE9;"| ceciniss&#275;tis
+|style="background:#E7FEE9;"| cecinissent
+|-
+!style="background:#92B887;" rowspan=4|<small>P<br>a<br>s<br>s<br>i<br>v<br>e
+!style="background:#92B887;"|<small>''Present''
+|style="background:#E7FEE9;"| canar
+|style="background:#E7FEE9;"| can&#257;ris
+|style="background:#E7FEE9;"| can&#257;tur
+|style="background:#E7FEE9;"| can&#257;mur
+|style="background:#E7FEE9;"| can&#257;min&#299;
+|style="background:#E7FEE9;"| canantur
+|-
+!style="background:#92B887;"|<small>''Imperfect''
+|style="background:#E7FEE9;"| canerer
+|style="background:#E7FEE9;"| caner&#275;ris
+|style="background:#E7FEE9;"| caner&#275;tur
+|style="background:#E7FEE9;"| caner&#275;mur
+|style="background:#E7FEE9;"| caner&#275;min&#299;
+|style="background:#E7FEE9;"| canerentur
+|-
+!style="background:#92B887;"|<small>''Perfect''
+|style="background:#E7FEE9;"|cantus<font color="red"><sup>1</sup></font><br>sim
+|style="background:#E7FEE9;"|cantus<font color="red"><sup>1</sup></font><br>s&#299;s
+|style="background:#E7FEE9;"|cantus<font color="red"><sup>1</sup></font><br>sit
+|style="background:#E7FEE9;"|cant&#299; <font color="red"><sup>2</sup></font><br>s&#299;mus
+|style="background:#E7FEE9;"|cant&#299; <font color="red"><sup>2</sup></font><br>s&#299;tis
+|style="background:#E7FEE9;"|cant&#299; <font color="red"><sup>2</sup></font><br>sint
+|-
+!style="background:#92B887;"|<small>''Pluperfect''
+|style="background:#E7FEE9;"|cantus<font color="red"><sup>1</sup></font><br>essem
+|style="background:#E7FEE9;"|cantus<font color="red"><sup>1</sup></font><br>ess&#275;s
+|style="background:#E7FEE9;"|cantus<font color="red"><sup>1</sup></font><br>esset
+|style="background:#E7FEE9;"|cant&#299; <font color="red"><sup>2</sup></font><br>ess&#275;mus
+|style="background:#E7FEE9;"|cant&#299; <font color="red"><sup>2</sup></font><br>ess&#275;tis
+|style="background:#E7FEE9;"|cant&#299; <font color="red"><sup>2</sup></font><br>essent
+|-
+!style="background:#BD91BD;" colspan=3| <small>Imperative
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| cane
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|style="background:#FCF2E9;"| canite
+|style="background:#FCF2E9;" align="center"|&mdash;&mdash;
+|}
+<font color="red"> 1 </font> = cantus / canta / cantum  <br>
+<font color="red"> 2 </font> = cant&#299; / cantae / canta  <br>
 
 ===Related Terms===
 *[[cantare]]
