--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -1,7 +1,7 @@
 ==Russian==
 
 ===Noun===
-[[:ru:укроп|укроп]] (ukrop) - dill
+[[:ru:укроп|укроп]] (ukrop) - [[dill]]
 
 ==[[multilingual associations]]==
-'''crop''' укропа
+[[crop]] '''укроп'''а
