--- a/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
+++ b/wiki/%D1%83%D0%BA%D1%80%D0%BE%D0%BF.wikitext
@@ -4,4 +4,4 @@
 [[:ru:укроп|укроп]] (ukrop) - [[dill]]
 
 ==[[multilingual associations]]==
-[[crop]] '''укроп'''а
+[[crop]] '''укроп'''а - (of dill)
