--- a/wiki/interrobang.wikitext
+++ b/wiki/interrobang.wikitext
@@ -1,3 +1,3 @@
 {{-en-}}
 ===Noun===
-#The name of the symbol [[‽]], used in place of [[!?]]
+#The name of the symbol [[‽]] (a superimposed interrogation point and question point), used in place of [[!?]]
